# OpenGLBoilerplate

./: .gitignore  .gitmodules  0.ppm  1.ppm  2.ppm  3.ppm  CMakeLists.txt  Gaussian.py  Gen.cpp  LICENSE.txt  Main.cpp  README.md  perl.ppm  test.ppm  water.f.glsl  water.v.glsl  white.ppm
Components/: Component.hpp  filesystem.h  mesh.h  model.h
Components/Cameras/: DemoCamera.hpp
Components/Plane/: Plane.cpp  Plane.hpp
Components/Scenes/Demo/: DemoScene.cpp  DemoScene.hpp  DemoSceneConfig.hpp
Components/Scenes/GameScene/: GameScene.cpp  GameScene.hpp  GameSceneConfig.hpp
Components/Tests/Noisemap/: Noisemap.cpp  Noisemap.hpp
Components/Tower/: Tower.cpp  Tower.hpp
Core/: Common.hpp  Config.hpp  GameEngine.cpp  GameEngine.hpp
Core/Camera/: BaseCamera.hpp  Camera.cpp  Camera.hpp
Core/Context/: Context.cpp  Context.hpp
Core/ExceptionHandle/: ErrLog.cpp  ErrLog.hpp
Core/GameObjects/Camera/: BaseCamera.hpp  Camera.cpp  Camera.hpp
Core/GameObjects/Chunk/: Chunk.cpp  Chunk.hpp
Core/GameObjects/Cloud/: Cloud.cpp  Cloud.hpp
Core/GameObjects/Grass/: GrassBlade.cpp  GrassBlade.h  GrassElement.hpp
Core/GameObjects/ParticleSystem/: BillBoard.cpp  BillBoard.hpp  ParticleSystem.cpp  ParticleSystem.hpp
Core/GameObjects/Scene/: BaseScene.hpp
Core/GameObjects/Skybox/: EntitySun.cpp  EntitySun.hpp  Skybox.cpp  Skybox.hpp
Core/GameObjects/Skymap/: Skymap.cpp  Skymap.hpp
Core/GameObjects/Terrain/: Terrain.cpp  Terrain.hpp
Core/GameObjects/Tile/: Tile.cpp  Tile.hpp  WaterGenerator.cpp  WaterGenerator.h  WaterRenderer.cpp  WaterRenderer.h  WaterTile.cpp  WaterTile.h
Core/Graphics/: Drawable.hpp  Shader.cpp  Shader.hpp
Core/Graphics/Font/: Font.cpp  Font.hpp
Core/Graphics/Framebuffer/: FrameBuffer.cpp  FrameBuffer.h
Core/Graphics/Light/: ALight.cpp  ALight.hpp  BaseLight.hpp  PLight.cpp  PLight.hpp
Core/Graphics/Mesh/: BaseMesh.hpp  Mesh.cpp  Mesh.hpp
Core/Graphics/Mesh/DefaultMesh/: Mesh.cpp  Mesh.hpp
Core/Graphics/Mesh/TerrainMesh/: TerrainMesh.cpp  TerrainMesh.hpp
Core/Graphics/Model/: BaseModel.hpp  Model.cpp  Model.hpp
Core/Graphics/Shader/: Shader.cpp  Shader.hpp
Core/Graphics/Skybox/: Skybox.cpp  Skybox.hpp
Core/Graphics/Texture/: Texture.cpp  Texture.hpp
Core/Input/: Input.cpp  Input.hpp
Core/Physics/AABB/: AABBObject.cpp  AABBObject.hpp
Core/PostProcessing/: ScreenSpace.hpp
Core/PostProcessing/Bloom/: Bloom.cpp  Bloom.hpp
Core/PostProcessing/FirstPass/: FirstPass.cpp  FirstPass.hpp
Core/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
Core/ResourceManagers/: ResourceManager.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp
Core/Scene/: BaseScene.hpp
Core/Utility/: ByteBuffer.cpp  ByteBuffer.h  Filesystem.hpp  Random.cpp  Random.hpp  Tool.hpp
Core/Utility/GrassUtils/: FloatTexture.hpp  NoiseGen.hpp  Transform.hpp
Core/Utility/Noise/: Noise.cpp  Noise.hpp
Dependences/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
Dependences/glad/include/glad/: glad.h
Dependences/glad/src/: glad.c
Resources/: perl.ppm  white.ppm
Resources/Models/LightHouse/: lightHouse.mtl
Resources/Models/Plane/: plane.mtl
Resources/Shaders/Bloom/: bloom.frag.glsl  bloom.vert.glsl
Resources/Shaders/Cloud/: cloud.frag.glsl  cloud.vert.glsl
Resources/Shaders/DemoSky/: Sky.frag.glsl  Sky.vert.glsl
Resources/Shaders/DemoTerrainMesh/: TerrainMesh.frag.glsl  TerrainMesh.tcss.glsl  TerrainMesh.tess.glsl  TerrainMesh.vert.glsl
Resources/Shaders/EntitySun/: sun.frag.glsl  sun.vert.glsl
Resources/Shaders/FirstPass/: firstPass.frag.glsl  firstPass.vert.glsl
Resources/Shaders/Font/: font.frag.glsl
Resources/Shaders/GrassBlade/: grassBlades.frag.glsl  grassBlades.vert.glsl
Resources/Shaders/Particle/: particle_graph.frag.glsl  particle_graph.geom.glsl  particle_graph.vert.glsl
Resources/Shaders/Plane/: plane.frag.glsl  plane.vert.glsl
Resources/Shaders/SkyMap/: skymap.frag.glsl  skymap.vert.glsl
Resources/Shaders/Skybox/: Skybox.frag.glsl  skybox.frag.glsl  skybox.vert.glsl
Resources/Shaders/TerrainMesh/: TerrainMesh.frag.glsl  TerrainMesh.geom.glsl  TerrainMesh.tess.glsl  TerrainMesh.vert.glsl
Resources/Shaders/Test/: Test.frag.glsl  Test.vert.glsl
Resources/Shaders/Tests/: test.frag.glsl  test.vert.glsl
Resources/Shaders/Tower/: tower.frag.glsl  tower.vert.glsl
Resources/Shaders/Water/: water.frag.glsl  water.vert.glsl
Resources/Textures/DemoTerrainTexture/: TerrainMesh-bak1.ppm  TerrainMesh-bak2.ppm  TerrainMesh-bak3.ppm  TerrainMesh-bak5.ppm  TerrainMesh-bak6.ppm  white.ppm
Tests/: TestMain.cpp  TestPerlin.hpp  test.c
